API changes.  Moving some methods from Iterate to Iterables.  Added generate() to Iterables.  Simplified join unit tests for easier maintenance.  Renamed FlattenIterable and flatten() methods to ConcatIterable and concat().